# ogretest

./: CMakeLists.txt  XkPhysicsWorld.h
media/materials/scripts/: DebugShape.material  HavokGirl.material  Ogre.material  capsule.material  sphere.material
media/models/: 10x10box.mesh  1x1x1box.mesh  capsule.mesh  r1ball.mesh  r5ball.mesh  r5capsule.mesh  sphere.mesh
src/: CMakeLists.txt  XkDebugRenderable.cpp  XkDebugRenderable.h  XkOgreApplication.cpp  XkOgreApplication.h  XkOgreFrameListener.h  XkPhysicsBody.cpp  XkPhysicsBody.h  XkPhysicsWorld.cpp  XkPhysicsWorld.h  XkSingleton.h  XkStepListener.h  XkUtil.h
src/firsthavok/: CMakeLists.txt  XkPhysicsWorld.cpp  XkPhysicsWorld.h  firsthavok.cpp
src/firstogre/: CMakeLists.txt  firstogre.cpp
src/ragdollconstraint/: CMakeLists.txt  ragdollconstraint.cpp
src/testcharctl/: CMakeLists.txt  ThirdPersonCamera.h  XkPhysicsRBCharacter.cpp  XkPhysicsRBCharacter.h  testcharctl.cpp
src/thirdcamera/: CMakeLists.txt  ThirdPersonCamera.h  thirdcamera.cpp
